Add user view page

--- a/frontend/angular/src/app/app.component.html
+++ b/frontend/angular/src/app/app.component.html
@@ -1,1 +1,5 @@
+<button *ngIf="loggedIn" class="margin-corner" mat-icon-button color="primary" (click)="logout()">
+    <mat-icon>meeting_room</mat-icon>
+</button>
+
 <router-outlet></router-outlet>
