--- a/frontend/angular/src/app/user/user-view/user-view.component.html
+++ b/frontend/angular/src/app/user/user-view/user-view.component.html
@@ -1,1 +1,57 @@
-<div *ngFor="let user of users">{{user.email}}</div>
+<mat-card class="center-vertically">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID</th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef> Email</th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <!-- Remove Column -->
+        <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef> Edit</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" (click)="onEdit(element.id, element.email)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <!-- Edit Column -->
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef> Remove</th>
+            <td mat-cell *matCellDef="let element" (click)="onDelete(element.id)">
+                <button mat-icon-button color="warn">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</mat-card>
+<mat-card class="center-vertically">
+    <div>
+        <form #form=ngForm>
+            <mat-form-field appearance="fill" class="margin-left">
+                <mat-label>email</mat-label>
+                <input ngModel required email maxlength="50" name="email" matInput>
+            </mat-form-field>
+            <mat-form-field appearance="fill" class="margin-left">
+                <mat-label>Password</mat-label>
+                <input ngModel required matInput name="password" maxlength="50" type="password">
+            </mat-form-field>
+            <button type="button" (click)="onAdd(form.value['email'], form.value['password'])" [disabled]="form.invalid" mat-button color="accent"
+                    class="margin-left">
+                <mat-icon>add</mat-icon>
+            </button>
+        </form>
+    </div>
+</mat-card>
